@@ -21,6 +21,9 @@
  * Fix regression that added a dependency on C git for the
    test suite. (Jelmer Vernooĳ, #720)
 
+ * Fix compatibility with Python 3.8 - mostly deprecation warnings.
+   (Jelmer Vernooĳ)
+
 0.19.12	2019-08-13
 
  BUG FIXES
